<resources>
    <string name="app_name">HES App</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="service_events">Service Events</string>
    <string name="hes_events">HES Events</string>
    <string name="main_description">Hopefully Rachel can put text in a Google Sheet and we can make it appear here. \n\n Hello Children! Events A and B are new! check it out! Craig is NOT cool!</string>
    <string name="hes_calendar">HES Calendar</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_calendar_view_example">CalendarViewExampleActivity</string>
</resources>
